cabal-version:       2.4

name:                hedgehog-gen
version:             0.1.0.0
synopsis:            Customizable Gen for ADT using Generics
-- description:
homepage:            https://github.com/byteally/hedgehog-gen
-- bug-reports:
license:             BSD-3-Clause
license-file:        LICENSE
author:              Magesh
maintainer:          magesh85@gmail.com
-- copyright:
category:            Testing
extra-source-files:  CHANGELOG.md, README.md

library
  exposed-modules:     Hedgehog.Gen.Generic
  -- other-modules:
  -- other-extensions:
  build-depends:       base        >=4.9 && <5
                     , hedgehog    >1.0 && <1.1
                     , bytestring  == 0.10.*
                     , text        >=1.1 && <1.3
                     , typerep-map >= 0.3.2
  hs-source-dirs:      src
  ghc-options:         -Wall
  default-language:    Haskell2010
